--- a/react/public/index.html
+++ b/react/public/index.html
@@ -22,9 +22,9 @@
 
 
   <!-- Vendor js -->
-  <script src="/js/vendor.min.js"></script>
+  <script src="/js/vendor.js"></script>
   <!-- App js -->
-  <script src="/js/app.min.js"></script>
+  <script src="/js/app.js"></script>
 
 </body>
 </html>
